[package]
name = "armc"
version = "1.1.1"
edition = "2021"
repository = "https://github.com/patrickfp93/armc/"
description = "Armc is a rust implementation that facilitates Mutex access to variables."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
